@startuml

class Biblioteca {
    - livros : ArrayList<Livro>
    - leitores : ArrayList<Leitor>

    + addLivro(l : Livro) : void
    + addLeitor(l : Leitor) : void
    + pesquisarLivro(titulo : String) : Livro
    + pesquisarLeitor(nome : String) : Leitor
    + pesquisarLeitorPorID(id : int) : Leitor
    + getLivros() : ArrayList<Livro>
    + getLeitores() : ArrayList<Leitor>
    + gerarRelatorioLivrosEmprestados() : void
    + gerarRelatorioUsuariosAtivos() : void
    + salvarBiblioteca(caminho : String) : void
    + carregarBiblioteca(caminho : String) : Biblioteca
}

class Livro {
    - titulo : String
    - autor : String
    - isbn : long
    - qtd : int
    - emprestado : int

    + isDisponivel() : boolean
    + emprestarLivro() : void
    + devolverLivro() : void
    + getTitulo() : String
    + getAutor() : String
    + getIsbn() : long
    + getQtd() : int
    + getEmprestado() : int
    + setTitulo(t : String) : void
    + setAutor(a : String) : void
    + setIsbn(i : long) : void
    + setQtd(q : int) : void
    + setEmprestado(e : int) : void
    + toString() : String
}

class Leitor {
    - usuario : String
    - ID : int
    - livrosAlugados : ArrayList<Livro>

    + emprestarLivro(l : Livro) : void
    + devolverLivro(titulo : String) : boolean
    + getLivrosAlugados() : ArrayList<Livro>
    + getUsuario() : String
    + getID() : int
    + toString() : String
}

class Login {
    - txtUsuario : JTextField
    - txtID : JTextField
    - btnLogin : JButton
    - biblioteca : Biblioteca

    + Login()
    - fazerLogin() : void
    - carregarLivrosExistentes() : void
    + main(args : String[]) : void
}

class Principal {
    - biblioteca : Biblioteca
    - leitor : Leitor

    + Principal(b : Biblioteca, l : Leitor)
    - cadastrarLivro() : void
}

' RELACIONAMENTOS

Biblioteca "1" *-- "*" Livro
Biblioteca "1" *-- "*" Leitor

Leitor "1" --> "*" Livro : aluga

Login --> Biblioteca
Principal --> Biblioteca
Principal --> Leitor

Login --> Principal

@enduml
